tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00158.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00158.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "Count", align 4
    %2 = const 0 : s32i
    store %2, %0
    scope {
        %5 = const 0 : s32i
        store %5, %1, align 4
        for cond: {
            %29 = load %1 : s32i, align 4
            %30 = const 4 : s32i
            %31 = cmp lt %29, %30 : bool
            condition %31
        } step: {
            %6 = load %1 : s32i, align 4
            %7 = inc %6 : s32i [nsw]
            store %7, %1, align 4
            yield
        } do {
            scope {
                %8 = get_global @printf : ((s8i*, ...) -> s32i)*
                %9 = get_global @.str : s8i[4]*
                %10 = cast(array_to_ptrdecay) %9 : s8i*
                %11 = load %1 : s32i, align 4
                %12 = call @printf(%10, %11) : s32i [all]
                scope {
                    %13 = load %1 : s32i, align 4
                    switch %13 {
                        case equal 1 {
                            %24 = get_global @printf : ((s8i*, ...) -> s32i)*
                            %25 = get_global @.str : s8i[4]*
                            %26 = cast(array_to_ptrdecay) %25 : s8i*
                            %27 = const 1 : s32i
                            %28 = call @printf(%26, %27) : s32i [all]
                            break
                        }
                        case equal 2 {
                            %19 = get_global @printf : ((s8i*, ...) -> s32i)*
                            %20 = get_global @.str : s8i[4]*
                            %21 = cast(array_to_ptrdecay) %20 : s8i*
                            %22 = const 2 : s32i
                            %23 = call @printf(%21, %22) : s32i [all]
                            break
                        }
                        case default {
                            %14 = get_global @printf : ((s8i*, ...) -> s32i)*
                            %15 = get_global @.str : s8i[4]*
                            %16 = cast(array_to_ptrdecay) %15 : s8i*
                            %17 = const 0 : s32i
                            %18 = call @printf(%16, %17) : s32i [all]
                            break
                        }
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %3 = const 0 : s32i
    store %3, %0
    %4 = load %0 : s32i
    return %4
}
