tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00159.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00159.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = "a=%d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[9] = "qfunc()\n" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn myfunc(%arg1: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s32i):
        %29 = alloca s32i, "x", align 4
        %30 = alloca s32i, "__retval", align 4
        store %arg1, %29
        %31 = load %29 : s32i, align 4
        %32 = load %29 : s32i, align 4
        %33 = mul %31, %32 : s32i [nsw]
        store %33, %30
        %34 = load %30 : s32i
        return %34
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn vfunc(%arg0: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %23 = alloca s32i, "a", align 4
        store %arg0, %23
        %24 = get_global @printf : ((s8i*, ...) -> s32i)*
        %25 = get_global @.str : s8i[6]*
        %26 = cast(array_to_ptrdecay) %25 : s8i*
        %27 = load %23 : s32i, align 4
        %28 = call @printf(%26, %27) : s32i [all]
        return
}
fn qfunc() -> void [external, c, no_inline, dso_local, nothrow] {
    %19 = get_global @printf : ((s8i*, ...) -> s32i)*
    %20 = get_global @.str.1 : s8i[9]*
    %21 = cast(array_to_ptrdecay) %20 : s8i*
    %22 = call @printf(%21) : s32i [all]
    return
}
fn zfunc() -> void [external, c, no_inline, dso_local, nothrow] {
    %18 = const #cir.ptr<null> : (() -> void)*
    call %18() [all]
    return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str.2 : s8i[4]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = const 3 : s32i
    %6 = call @myfunc(%5) : s32i [all]
    %7 = call @printf(%4, %6) : s32i [all]
    %8 = get_global @printf : ((s8i*, ...) -> s32i)*
    %9 = get_global @.str.2 : s8i[4]*
    %10 = cast(array_to_ptrdecay) %9 : s8i*
    %11 = const 4 : s32i
    %12 = call @myfunc(%11) : s32i [all]
    %13 = call @printf(%10, %12) : s32i [all]
    %14 = const 1234 : s32i
    call @vfunc(%14) [all]
    %15 = get_global @qfunc : (() -> void)*
    call @qfunc() [all]
    %16 = const 0 : s32i
    store %16, %0
    %17 = load %0 : s32i
    return %17
}
