tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00167.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00167.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[11] = "a is true\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[12] = "a is false\n" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[11] = "b is true\n" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[12] = "b is false\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "a", align 4
    %2 = alloca s32i, "b", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 1 : s32i
    store %4, %1, align 4
    scope {
        %18 = load %1 : s32i, align 4
        %19 = cast(int_to_bool) %18 : bool
        if %19 {
            %24 = get_global @printf : ((s8i*, ...) -> s32i)*
            %25 = get_global @.str : s8i[11]*
            %26 = cast(array_to_ptrdecay) %25 : s8i*
            %27 = call @printf(%26) : s32i [all]
            yield
        } else {
            %20 = get_global @printf : ((s8i*, ...) -> s32i)*
            %21 = get_global @.str.1 : s8i[12]*
            %22 = cast(array_to_ptrdecay) %21 : s8i*
            %23 = call @printf(%22) : s32i [all]
            yield
        }
        yield
    }
    %5 = const 0 : s32i
    store %5, %2, align 4
    scope {
        %8 = load %2 : s32i, align 4
        %9 = cast(int_to_bool) %8 : bool
        if %9 {
            %14 = get_global @printf : ((s8i*, ...) -> s32i)*
            %15 = get_global @.str.2 : s8i[11]*
            %16 = cast(array_to_ptrdecay) %15 : s8i*
            %17 = call @printf(%16) : s32i [all]
            yield
        } else {
            %10 = get_global @printf : ((s8i*, ...) -> s32i)*
            %11 = get_global @.str.3 : s8i[12]*
            %12 = cast(array_to_ptrdecay) %11 : s8i*
            %13 = call @printf(%12) : s32i [all]
            yield
        }
        yield
    }
    %6 = const 0 : s32i
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
